# BossEyebrow

./: .gitignore  CMakeLists.txt  README.md
BossEyebrow/: BossEyebrow.sln
BossEyebrow/BossEyebrow/: BossEyebrow.cpp  BossEyebrow.vcxproj  BossEyebrow.vcxproj.filters
apps/: CMakeLists.txt
apps/BossEyebrow/: CMakeLists.txt
apps/BossEyebrow/src/: Gl.h  main.cpp
apps/BossEyebrow/src/cards/: Deck.cpp  Deck.h  RoomCard.cpp  RoomCard.h
apps/BossEyebrow/src/input/: KeyInput.cpp  KeyInput.h  MouseButtonInput.cpp  MouseButtonInput.h  MousePosInput.cpp  MousePosInput.h
apps/BossEyebrow/src/network/: NetworkManager.cpp  NetworkManager.h
apps/BossEyebrow/src/render/: Camera.cpp  Camera.h  GraphicsUtils.cpp  GraphicsUtils.h  Shader.cpp  Shader.h  ShaderUtils.cpp  ShaderUtils.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h  lodepng.cpp
apps/BossEyebrow/src/render/shaders/: card.frag  card.vert  highlight.frag  highlight.vert
apps/BossServer/: CMakeLists.txt
apps/BossServer/src/: TCPServer.cpp  TCPServer.h  main.cpp
apps/common/: DataPacket.cpp  DataPacket.h  HelloPacket.cpp  HelloPacket.h  IPacket.h  PacketFactory.cpp  PacketFactory.h  PacketHeader.h  TCPConnection.cpp  TCPConnection.h
contrib/: CMakeLists.txt
contrib/asio-1.12.1/: CMakeLists.txt
contrib/glew-2.1.0/: CMakeLists.txt
contrib/glfw-3.2.1/: CMakeLists.txt
contrib/glm/: CMakeLists.txt
src/: main.cpp
